--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         room_version = "2.4.3"
         okhttp_version = "4.7.2"
         moshi_version = "1.11.0"
+        gson_version = "2.9.0"
         retrofit_version = "2.9.0"
         dagger_hilt_version = "2.42"
         timber_version = "5.0.1"
